syntax = "proto3";

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "io.grpc.examples.hello";
option java_outer_classname = "HelloProto";

package hello;

// Service definition
service Hello {
  rpc GetStatus (Status) returns (StatusReply) {
     option (google.api.http) = {
      get: "/hello.Hello/getStatus"
    };

  }
  rpc HelloServer (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/hello.Hello/helloServer"
    };
  }
}

message Status {}

message StatusReply {
  string status = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}